# vee-news-analyzer

./: .env  .gitignore  Cargo.toml  EXAMPLE.env  LICENSE.txt  README.md  aliases.js  deny.toml  docker-compose-multi-node.yml  docker-compose.yml  results.json  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  rustdoc.yml
crates/stdx/: Cargo.toml
crates/stdx/src/: lib.rs
crates/vna/: Cargo.toml
crates/vna/src/: main.rs
crates/vna_data_sync/: Cargo.toml
crates/vna_data_sync/src/: data_source.rs  lib.rs  news_api.rs
crates/vna_elasticsearch/: Cargo.toml
crates/vna_elasticsearch/src/: lib.rs
crates/vna_elasticsearch/tests/integration/: main.rs
crates/vna_es/: Cargo.toml
crates/vna_es/src/: index_version.rs  lib.rs
crates/vna_es/tests/integration/: main.rs
crates/vna_es_utils/: Cargo.toml
crates/vna_es_utils/src/: es_types.rs  lib.rs
crates/vna_migrations/: Cargo.toml
crates/vna_migrations/src/: lib.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
implementors/vna_es_utils/: trait.Success.js
scripts/: bootstrap.sh  create_storage.sh
src/stdx/: lib.rs.html
src/vna/: main.rs.html
src/vna_data_sync/: data_source.rs.html  lib.rs.html
src/vna_es/: index_version.rs.html  lib.rs.html
src/vna_es_utils/: es_types.rs.html  lib.rs.html
src/xtask/: lib.rs.html  not_bash.rs.html  pre_commit.rs.html
stdx/: all.html  fn.debug_time_it.html  fn.on_drop.html  index.html  sidebar-items.js  struct.NonHollowString.html
vna/: all.html  enum.CliSubcommand.html  enum.Snapshots.html  enum.Stats.html  fn.create_category_analysis_chart.html  fn.create_chart.html  fn.create_sentiment_analysis_chart.html  fn.create_significant_words_chart.html  fn.main.html  fn.open_svg_in_google_chrome.html  fn.stats_to_chart_data.html  index.html  sidebar-items.js  struct.ChartOpts.html  struct.CliArgs.html  struct.DataSourceArgs.html
vna_data_sync/: all.html  fn.run.html  index.html  sidebar-items.js  struct.RunOpts.html  struct.Stats.html
vna_es/: all.html  enum.SentimentPolarity.html  index.html  sidebar-items.js  struct.Article.html  struct.CreateArticlesIndexOpts.html  struct.FulltextSearchOpts.html  struct.IndexVersion.html  struct.SignificantWordsOpts.html  struct.Stats.html  struct.StatsOpts.html  struct.WithId.html
vna_es/index_version/: struct.IndexVersion.html
vna_es/snapshots/: fn.register_repo.html  fn.restore_from_snapshot.html  fn.take_snapshot.html  index.html  sidebar-items.js
vna_es_utils/: all.html  fn.create_elasticsearch_client.html  fn.try_create_elasticsearch_client.html  index.html  macro.elasticsearch_client_or_return!.html  macro.elasticsearch_client_or_return.html  sidebar-items.js  trait.Success.html
vna_es_utils/es_types/: index.html  sidebar-items.js  struct.AggrsResponse.html  struct.Doc.html  struct.GetAliasesResponse.html  struct.IndexAlias.html  struct.IndexAliases.html  struct.SearchHits.html  struct.SearchResponse.html  struct.SignificantTextAggr.html  struct.SignificantTextAggrBucket.html  struct.TermsAggr.html  struct.TermsAggrBucket.html
xtask/: Cargo.toml  all.html  index.html  sidebar-items.js
xtask/codegen/: enum.Mode.html  index.html  sidebar-items.js
xtask/codegen/github_workflows/: fn.generate.html  index.html  sidebar-items.js
xtask/pre_commit/: fn.install_hook.html  fn.run_hook.html  index.html
xtask/src/: lib.rs  main.rs  not_bash.rs  pre_commit.rs
xtask/src/codegen/: github_workflows.rs  mod.rs
xtask/src/codegen/github_workflows/: ci.yml  rustdoc.yml
xtask/tests/tidy_tests/: main.rs
(+18 files in other folders)
