[workspace]
members = ["crates/*"]

[profile.dev]
# disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0


# [profile.release.package.proc-macro2]
# opt-level = 0
# [profile.release.package.quote]
# opt-level = 0
# [profile.release.package.syn]
# opt-level = 0
# [profile.release.package.serde_derive]
# opt-level = 0
# [profile.release.package.xtask]
# opt-level = 0
