[package]
name = "vna"
description = "vee_news_analyzer"
version = "0.1.0"
authors = ["veetaha <veetaha2@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
structopt = "0.3.14"
anyhow = "1.0.31"
log = "0.4.8"
env_logger = "0.7.1"
url = "2.1.1"
dotenv = "0.15.0"

stdx = { path = "../stdx" }
vna_data_sync = { path = "../vna_data_sync" }
