[package]
name = "vna_data_sync"
version = "0.1.0"
authors = ["veetaha <veetaha2@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
elasticsearch = "7.7.0-alpha.1"
url = "2.1"
newsapi = "0.3.1"
serde_json = "1.0"
tokio = { version = "0.2.21", features = ["full"] }

stdx = { path = "../stdx" }
vna_es = { path = "../vna_es" }
vna_es_utils = { path = "../vna_es_utils" }
