[package]
name = "vna_es"
version = "0.1.0"
authors = ["veetaha <veetaha2@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
http = "0.2.1"
elasticsearch = "7.7.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
itertools = "0.9"

stdx = { path = "../stdx" }
vna_es_utils = { path = "../vna_es_utils" }

[dev-dependencies]
tokio = { version = "0.2.21", features = ["full"] }
